src/test/testData/inspections/semantic-error-inspector/IllegalShadow.toit
class A:
  a/any

  b:
    <error descr="Illegal shadow of outer variable">a </error>:= 1